issue #2 all cropped formats are now editable in the same lightbox

--- a/css/wprie-admin.css
+++ b/css/wprie-admin.css
@@ -13,6 +13,15 @@
 
 #wprie-cropper-wrapper .media-frame-content {
 	padding: 16px;
+	border-bottom: none;
+}
+
+#wprie-cropper-wrapper .media-frame-toolbar {
+	border-top: none;
+}
+
+#wprie-cropper-wrapper .media-toolbar {
+	border: none;
 }
 
 .wprie-not-existing-crop img {
